Add Self-Attention (ViT) visualisation

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <!-- NEW CV LINKS HERE -->
 
   <h2>Machine Learning</h2>
+  <a href="#self-attention">Self-Attention (ViT)</a>
   <!-- NEW ML LINKS HERE -->
 </nav>
 
@@ -344,6 +345,18 @@
   </div>
 </section>
 
+<section id="self-attention">
+  <h2>Self-Attention in Vision Transformers</h2>
+  <p class="desc">Step by step: What happens inside an attention layer? (Section 5.2)</p>
+  <div class="viz">
+    <div class="sa-section">
+      <p class="sa-subtitle">Click through each step to understand how attention computes relationships between image patches</p>
+      <div class="sa-step-nav" id="saStepNav"></div>
+      <div id="saContent"></div>
+    </div>
+  </div>
+</section>
+
 <!-- ADD NEW SECTIONS HERE -->
 
 </main>
@@ -351,6 +364,7 @@
 <script src="js/low-pass-filter.js"></script>
 <script src="js/harris-vs-sift.js"></script>
 <script src="js/sift-pipeline.js"></script>
+<script src="js/self-attention.js"></script>
 
 </body>
 </html>
